----------------------------------------

Changes in version 0.4 (2006-01-):
! Unicode build for Windows 2k/XP.
! Added support for switching user interface languages.
! Added facing and continuous-facing page layouts.
+ Added support for hilighted annotations.
+ Display mode and/or zoom specified in the document are used when opening.
+ Improved page display (borders and background).
+ Printer settings are retained while application is running.
* Fixed a problem with WinDjView not responding for a few seconds
  after opening a document on some systems.
* Fixed crash in print dialog when last page is selected and
  two pages per sheet mode is activated.

Changes in version 0.3.6 (2005-12-21):
! Multithreading fixes: WinDjView should work more stable, especially
  on multicore, multiprocessor and hyperthreaded systems.
+ Print dialog now takes into account physical printer margins
  by default; added an option to ignore them (old behavior).
+ Print dialog now takes into account display mode (foreground,
  background, black and white or color).
* Fixed bug with preview in print dialog and printing: color pages
  sometimes were not shown in preview and not printed.
* Fixed bug in print dialog: clicking Properties buttons
  sometimes resets printing options.
* Fixed parsing print ranges in print dialog.
* Fixed paper orientation: original orientation as specified
  in the file is correctly applied.
* Fixed printing odd/even pages in one page per sheet mode.

Changes in version 0.3.5 (2005-06-14):
+ Added "Save Copy As" dialog.
* Fixed a crash when opening some corrupted files.
* Fixed opening files with '#' character in filename.
* Fixed a problem which could cause crashes after printing and after
  checking for update.

Changes in version 0.3.4 (2005-05-02):
+ Added "Go To Page" dialog.
+ Added licensing info to About dialog.
* Fixed crash when using Search Results.
* Fixed wrong page bounds calculation in single page layout.