@@ -563,13 +563,15 @@ BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,7,7,20,20
 END
 
-IDD_GOTO_PAGE DIALOGEX 0, 0, 123, 48
+IDD_GOTO_PAGE DIALOG DISCARDABLE  0, 0, 123, 48
 STYLE DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Go To Page"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+FONT 8, "MS Shell Dlg"
 BEGIN
     LTEXT           "&Page:",IDC_STATIC,7,7,21,12,SS_CENTERIMAGE
     EDITTEXT        IDC_PAGE,30,7,55,12,ES_AUTOHSCROLL
+    CONTROL         "",IDC_SPIN_PAGE,"msctls_updown32",UDS_ALIGNRIGHT | 
+                    UDS_AUTOBUDDY | UDS_ARROWKEYS,77,8,11,14
     LTEXT           "of 9999",IDC_PAGE_COUNT,89,7,27,12,SS_CENTERIMAGE
     DEFPUSHBUTTON   "OK",IDOK,9,27,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,64,27,50,14
@@ -868,7 +870,7 @@ BEGIN
     ID_LAYOUT_SINGLEPAGE    "Single page layout\nSingle Page"
     ID_LAYOUT_CONTINUOUS    "Continuous page layout\nContinuous"
     ID_LAYOUT_FACING        "Facing page layout\nFacing"
-    ID_LAYOUT_CONTINUOUS_FACING
+    ID_LAYOUT_CONTINUOUS_FACING 
                             "Continuous-facing page layout\nContinuous - Facing"
 END
 
